src/objects/BudgetMilestone__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExDate__c</fullName>
        <label>Ex. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PaymentTermsOffset__c</fullName>
        <formula>CASE(TEXT(Project__r.PaymentTerms__c)
   , &apos;7 DAYS&apos;, 7
   , &apos;14 DAYS&apos;, 14
   , &apos;30 DAYS&apos;, 30
   , &apos;45 DAYS&apos;, 45
   , &apos;60 DAYS&apos;, 60
   , &apos;90 DAYS&apos;, 90
   , &apos;120 DAYS&apos;, 120
   , 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Budget Milestones</relationshipLabel>
        <relationshipName>BudgetMilestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Budget Milestone</label>
    <nameField>
        <displayFormat>BMS-{0000000000}</displayFormat>
        <label>Budget Milestone Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>